Corrigind warning do dev tools

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
-    background-image: url('http://getwallpapers.com/wallpaper/full/a/6/2/311486.jpg');
+    background-image: url(foto_fundo.jpg);
     background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
